--- a/style.css
+++ b/style.css
@@ -7,9 +7,26 @@ body {
     width: 100%;
     height: 100vh;
     background-image: url('https://images.unsplash.com/photo-1559825481-12a05cc00344?q=80&w=465&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    background-size: cover;
+    background-size:130%;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
 
+}
+
+.container{
+    padding: 100px;
+}
+
+h1{
+    font-size: 50px;
+}
+p{
+    color: gray;
+}
+
+@media (max-width:500px){
+    .container{
+        padding: 10px;
+    }
 }
